# rust-ffi-bench

./: Cargo.toml  blah
examples/: generate.rs
src/: flt.rs  main.rs  string.rs
