[package]
name = "ffi-bench"
version = "0.1.0"
authors = ["Jacob Rosenthal <jacobrosenthal@gmail.com>"]
edition = "2018"

[dependencies.encoding]
git = "https://github.com/lifthrasiir/rust-encoding"

[dependencies]
byteorder = "1.0.0"

[dev-dependencies]
regex = "1.0.6"

[[bench]]
name = "string"
path = "src/flt.rs"